Fix z-index

--- a/src/styles/_doria_banner.scss
+++ b/src/styles/_doria_banner.scss
@@ -6,7 +6,7 @@
   position: fixed;
   left: 0;
   bottom: 0;
-  
+  z-index: 110;
   &__description {
     padding: 0px 5%;
   }
@@ -16,6 +16,7 @@
       text-align: right;
     }
   }
+
   &__button {
     width: 100%;
     background-color: $backgroundColorButton;
